[package]
name = "opentelemetry-datadog-cloudflare"
version = "0.12.0"
description = "Datadog exporters and propagators for OpenTelemetry for Cloudflare workers"
homepage = "https://github.com/grafbase/opentelemetry-datadog-cloudflare/"
repository = "https://github.com/grafbase/opentelemetry-datadog-cloudflare/"
readme = "README.md"
categories = ["development-tools::debugging", "development-tools::profiling"]
keywords = ["opentelemetry", "tracing", "cloudflare", "worker", "datadog"]
license = "Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
reqwest-client = ["reqwest", "reqwest/wasm-streams"]

[patch.crates-io]
hyper-util = { git = "https://github.com/grafbase/hyper-util", rev = "c7acf8968d96a4408e952a097d93602d2e8ed01a" }
reqwest = { git = "https://github.com/grafbase/reqwest", rev = "9d8f00dbfa2274e6cf7061aa97ffc8677167a729" } # hyper-v1-and-wasm-from-parts-build-split

[dependencies]
async-trait = "0.1"
# don't bump to 0.18, it leads to memory access out of bounds in cloudflare workers
opentelemetry = { git = "https://github.com/grafbase/opentelemetry-rust", rev = "0090eb6360104589313b78749ce6c3d1f81e1b99", features = [
  "trace",
] } # 0.17.0-send-wrapper-as-any
opentelemetry-semantic-conventions = { git = "https://github.com/grafbase/opentelemetry-rust", rev = "0090eb6360104589313b78749ce6c3d1f81e1b99" } # 0.17.0-send-wrapper-as-any
reqwest = { version = "0.11", default-features = false, optional = true }
thiserror = "1.0"
itertools = "0.12"
http = "1"
lazy_static = "1"
prost = { version = "0.11", features = ["std"] }
send_wrapper = { version = "0.6", features = ["futures"] }

[build-dependencies]
prost-build = { version = "0.11" }
tonic-build = { version = "0.8", features = ["transport", "prost"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11", default-features = false }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", default-features = false, features = [
  "__rustls",
] }

[dev-dependencies]
opentelemetry = { git = "https://github.com/grafbase/opentelemetry-rust", rev = "0090eb6360104589313b78749ce6c3d1f81e1b99", features = [
  "trace",
  "testing",
] } # 0.17.0-send-wrapper-as-any
